quest detail button overlap fix + quest details more info

--- a/css/style.css
+++ b/css/style.css
@@ -190,15 +190,18 @@ body{
 }
 
 #startEnd {
+
     background-color: gainsboro;
     position: fixed;
     left: 50%;
+    top: 28%;
     font-family: VT323;
     padding: 5px;
     margin-top: 10%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
 
 /* MAP */
 #Map {
@@ -216,7 +219,7 @@ body{
 
 #questMap {
     position: fixed;
-    top: 30vh;
+    top: 40vh;
     bottom: 0;
     /* vw and vh stand for viewport width/height. We are getting these in html file */
     width: 100vw;
